# council-mcp

./: .gitignore  LICENSE  README.md  config.py  council.py  pyproject.toml  server.py  test_conclave.py  test_council.py
