[project]
name = "council-mcp"
version = "0.1.0"
description = "MCP server providing democratic AI consensus from multiple LLM models for use with Claude and other MCP-compatible editors"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
keywords = ["mcp", "llm", "council", "ai", "claude", "openrouter"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.27.0",
    "python-dotenv>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/stephenpeters/council-mcp"
Repository = "https://github.com/stephenpeters/council-mcp"

[project.scripts]
council-mcp = "server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
